--- a/app/src/main/res/layout/activity_visualizer.xml
+++ b/app/src/main/res/layout/activity_visualizer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/bt_play"
@@ -10,12 +11,105 @@
         android:layout_alignParentTop="true"
         android:text="播放" />
 
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="30dp" />
+
+    <FrameLayout
+        android:id="@+id/fl_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/iv_voice_input_logo"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:text="正在说话"
+            android:textColor="#504B2D"
+            android:textSize="13sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="40dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_indicator7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_7"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_indicator6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_6"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_indicator5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_5"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_indicator4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_4"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_indicator3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_3"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_indicator2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_2"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/iv_indicator1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/voice_indicator_1"
+                android:visibility="gone"/>
+
+
+        </LinearLayout>
+    </FrameLayout>
+
+    <!--android:background="@drawable/button_press_to_bg"-->
     <Button
-        android:id="@+id/textView"
+        android:id="@+id/bt_speech"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:gravity="center"
         android:text="按住说话" />
-</RelativeLayout>
+</FrameLayout>
